deploy/lldap/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress
spec:
  entryPoints:
    - ext-web
  routes:
    - kind: Rule
      match: Host(`ldap.internal.ticklethepanda.co.uk`)
      services:
        - name: lldap
          namespace: lldap
          port: 3890
